--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-*.annot
-*.cmo
-*.cma
-*.cmi
-*.a
-*.o
-*.cmx
-*.cmxs
-*.cmxa
-
-# ocamlbuild working directory
-_build/
-
-# ocamlbuild targets
-*.byte
-*.native
-
-# oasis generated files
-setup.data
-setup.log
-
+.cache/
+dist/
+lib/
+node_modules/
 # Merlin configuring file for Vim and Emacs
 .merlin
-
-# Dune generated files
-*.install
-
-# Local OPAM switch
-_opam/
