--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "reason-react": "^0.8.0",
+    "reason-react": "^0.9.1",
     "recoil": "^0.0.10"
   },
   "devDependencies": {
-    "bs-platform": "^7.3.2",
+    "bs-platform": "8.1.0",
     "parcel-bundler": "^1.12.3"
   }
 }
