--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reason-react": "^0.9.1",
-    "recoil": "^0.0.10"
+    "recoil": "^0.0.13"
   },
   "devDependencies": {
-    "bs-platform": "8.1.0",
+    "bs-platform": "^8.2.0",
     "parcel-bundler": "^1.12.3"
   }
 }
