--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,19 +1,14 @@
 {
   "name": "bs-recoil",
-  "reason": {
-    "react-jsx": 3
-  },
-  "refmt": 3,
+  "reason": {"react-jsx": 3},
   "sources": [
-    {
-      "dir": "src"
-    },
-    {
-      "dir": "example",
-      "type": "dev"
-    }
+    {"dir": "src"},
+    {"dir": "example", "type": "dev"}
   ],
   "bs-dependencies": [
-    "reason-react"
-  ]
+    "@rescript/react"
+  ],
+  "warnings": {
+    "error" : "+101"
+  }
 }
