--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,12 @@
 {
   "name": "bs-recoil",
   "reason": {"react-jsx": 3},
+  "package-specs": [
+    {
+      "module": "es6",
+      "in-source": false
+    }
+  ],
   "sources": [
     {"dir": "src"},
     {"dir": "example", "type": "dev"}
