--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@rescript/react": "^0.10.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "recoil": "^0.3.0"
+    "recoil": "^0.4.0"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-beta.2",
+    "parcel": "^2.0.0-rc.0",
     "rescript": "*"
   }
 }
