--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Herve Giraud <giraud.contact@yahoo.fr>",
   "license": "MIT",
   "main": "Recoil.js",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "build": "rescript",
     "clean": "rescript clean -with-deps",
@@ -19,10 +20,10 @@
     "@rescript/react": "^0.10.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "recoil": "^0.4.0"
+    "recoil": "^0.5.0"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "rescript": "*"
   },
   "packageManager": "yarn@3.0.2"
